# pdf-md-service

./: README.md  batch_convert.py  project_structure.txt  pyproject.toml  test_vlm.py
api/: Dockerfile  api.py  requirements.txt
core/: interfaces.py  markdown_injector.py
core/captioning/: vlm_captioner.py
core/converters/: marker_converter.py
core/retry/: exponential_backoff.py
infra/: README.md  docker-compose.yml
infra/ray_serve/: Dockerfile  requirements.txt  serve_config.yaml  start.sh
services/: config.py  dispatcher.py  main.py  webhook_sender.py  worker.py
